 o Use Ctrl-click to select walk dialog user list entry without activating.
   Handy for deleting entries without changing entry field content.
 o Avoid drivebar MB2 exception
 o Remember last seek and scan mask selection across runs
 o Avoid traps when changing tree container display style
 o Restore missing drives to drive list dropdown

3.17

 o Added progress indicators when copying or moving files and/or directories - flashing
 led also shows list including # of total in thread notes window Ticket 302 (Steven)
 o Place drive letters over bitmaps replace, enlarge bitmaps in drive bar and add a refresh
 removable media and rescan button to the drive bar. Tickets 13, 91, 378, 385 (Gregg, David)
 o Added Option to list drive label or file system name along side of the drive letter
 in the drive tree. Tickets 47 339 (Gregg)
 o Modified the directory container "Scanning" message to "Please wait ...scanning...
 Ticket 291 (Steven)
 o Toggling between split and full status bars no longer opens a databar window. Ticket 364
 (Gregg)
 o Shortened the status line 1 message for split status lines; Conditionally added
 file system type to message. Ticket 365 (Gregg)
 o Added option to open user INI, System INI or fm/2's INI files to a submenu on
 the Utilities menu Ticket 366 (Gregg)
 o FM/2 can now load in high memory. We have shipped both high (3.17.1) and low (3.17.0)
 versions. Ticket 368, 388. 389, 401 (Gregg)
 o Streamlined container scanning/loading Ticket 369, 370, 380, 381, 382 (Gregg, Steven)
 o Fixed crashes caused by collecting files from list file and by pressing Ctrl-g
 in the collector. Ticket 376, 395 (Gregg, Steven)
 o Allow .LONGNAME to be displayed for FAT & LAN drives	and delete .LONGNAME EA
 if it becomes the filename on a copy or move. Ticket 377. 379, 386 (Gregg)
 o Setting to turn off state save now work Ticket 383 (Gregg)
 o Fixed container update failure in FM2 lite Ticket 390 (Gregg)